--- a/src/main/resources/templates/WebKhachHang/chi-tiet-don-mua.html
+++ b/src/main/resources/templates/WebKhachHang/chi-tiet-don-mua.html
@@ -802,6 +802,9 @@
           <th><i class="fas fa-image mr-2"></i>Sản phẩm</th>
           <th><i class="fas fa-sort-numeric-up mr-2"></i>Số lượng</th>
           <th><i class="fas fa-tag mr-2"></i>Giá</th>
+          <th><i class="fas fa-tags mr-2"></i>Giá gốc</th>
+          <th><i class="fas fa-fire mr-2"></i>Giảm giá</th>
+          <th><i class="fas fa-bullhorn mr-2"></i>Chiến dịch</th>
           <th><i class="fas fa-calculator mr-2"></i>Thành tiền</th>
           <th><i class="fas fa-comment mr-2"></i>Ghi chú</th>
         </tr>
@@ -827,10 +830,32 @@
             <span class="font-semibold text-lg" th:text="${chiTiet.soLuong}"></span>
           </td>
           <td>
-            <span class="price font-semibold" th:attr="data-value=${chiTiet.gia}"></span>
+            <span class="price font-semibold" th:attr="data-value=${chiTiet.chiTietSanPhamDto != null ? chiTiet.chiTietSanPhamDto.gia : chiTiet.gia}"></span>
           </td>
           <td>
-            <span class="price font-semibold text-[#153054]" th:attr="data-value=${chiTiet.gia * chiTiet.soLuong}"></span>
+        <span th:if="${chiTiet.chiTietSanPhamDto != null and chiTiet.chiTietSanPhamDto.oldPrice != null}">
+          <del th:text="${#numbers.formatDecimal(chiTiet.chiTietSanPhamDto.oldPrice, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></del>
+        </span>
+            <span th:unless="${chiTiet.chiTietSanPhamDto != null and chiTiet.chiTietSanPhamDto.oldPrice != null}">
+          -
+        </span>
+          </td>
+          <td>
+        <span th:if="${chiTiet.chiTietSanPhamDto != null and chiTiet.chiTietSanPhamDto.discount != null}" class="text-red-500">
+          <strong th:text="${chiTiet.chiTietSanPhamDto.discount}"></strong>
+        </span>
+            <span th:unless="${chiTiet.chiTietSanPhamDto != null and chiTiet.chiTietSanPhamDto.discount != null}">
+        </span>
+          </td>
+          <td>
+        <span th:if="${chiTiet.chiTietSanPhamDto != null and chiTiet.chiTietSanPhamDto.discountCampaignName != null}" class="text-blue-500">
+          <strong th:text="${chiTiet.chiTietSanPhamDto.discountCampaignName}"></strong>
+        </span>
+            <span th:unless="${chiTiet.chiTietSanPhamDto != null and chiTiet.chiTietSanPhamDto.discountCampaignName != null}">
+        </span>
+          </td>
+          <td>
+            <span class="price font-semibold text-[#153054]" th:attr="data-value=${chiTiet.chiTietSanPhamDto != null ? chiTiet.chiTietSanPhamDto.gia * chiTiet.soLuong : chiTiet.gia * chiTiet.soLuong}"></span>
           </td>
           <td>
             <span th:text="${chiTiet.ghiChu != null ? chiTiet.ghiChu : 'Không có'}"></span>
